work on ndhs pages implementation

--- a/src/app/component/common/layout-inner/layout-inner.component.html
+++ b/src/app/component/common/layout-inner/layout-inner.component.html
@@ -1,6 +1,7 @@
 <div id="main" class="layout-main">
     <header>
-        <app-header-outer></app-header-outer>
+        <app-header-inner></app-header-inner>
+        <app-filter-area></app-filter-area>
     </header>
     <!-- Page content area start -->
     <div class="wrapper">
