--- a/src/app/component/pages/home/home.component.html
+++ b/src/app/component/pages/home/home.component.html
@@ -26,21 +26,31 @@
                 <a class="link">I-DAIR GRM 2021 release is available here</a>
             </p>
             <button mat-button>Read More</button>                                                                                                                      
-            <div class="row">
-                <div class="col">
-                    <div class="card image-card">
-                        <img src="assets/images/img-01.jpg" class="card-img-top" alt="...">
-                        <h2>Digital Health Research and Development Map</h2>
-                      </div>
-                </div>
-                <div class="col">
-                    <div class="card image-card">
-                        <a [routerLink]="['/NdhsMap']" routerLinkActive="router-link-active" >
-                        <img src="assets/images/img-01.jpg" class="card-img-top" alt="...">
-                        <h2>National Digital Health Strategy Map</h2>
-                        </a>
-                      </div>
-                </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card image-card">
+                    <a [routerLink]="['/ndhs-map']" routerLinkActive="router-link-active" >
+                    <img src="assets/images/banner-01.jpg" class="card-img-top" alt="...">
+                    <h2>National Digital Health <br>Strategy Map</h2>
+                    </a>
+                  </div>
+            </div>
+            <div class="col">
+                <div class="card image-card">
+                    <img src="assets/images/banner-02.jpg" class="card-img-top" alt="...">
+                    <h2>Digital Health Research and<br> Development Map</h2>
+                  </div>
+            </div>
+            <div class="col">
+                <div class="card image-card">
+                    <a [routerLink]="['/ndhs-map']" routerLinkActive="router-link-active" >
+                    <img src="assets/images/banner-03.jpg" class="card-img-top" alt="...">
+                    <h2>Digital Mental Health Research and<br> Development Map</h2>
+                    </a>
+                  </div>
             </div>
         </div>
     </div>
