--- a/src/app/component/common/footer/footer.component.css
+++ b/src/app/component/common/footer/footer.component.css
@@ -6,7 +6,7 @@
     background: #f5f5f5;
 }
 span.copyright-text {
-    color: #5380CD;
-    font-size: 15px;
+    color: #74A7BA;
+    font-size: 12px;
     line-height: 30px;
 }
