--- a/src/app/component/pages/home/home.component.css
+++ b/src/app/component/pages/home/home.component.css
@@ -15,17 +15,17 @@ div#home-content-header {
 }
 .home-heading h1 {
     color: #5380CD;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 28px;
     position: relative;
 }
 .home-content h1 {
-    font-size: 30px;
+    font-size: 28px;
     color: #5380CD;
 }
 .home-content p {
     color: #5380CD;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 30px;
 }
 .home-content {
@@ -53,14 +53,14 @@ a.link {
     z-index: 2;
     line-height: 40px;
 }
-.card.image-card:before {
+/* .card.image-card:before {
     position: absolute;
-    background: rgb(0 0 0 / 20%);
+    background: rgb(0 0 0 / 35%);
     width: 100%;
     height: 100%;
     content: '';
     z-index: 1;
-}
+} */
 .card.image-card img {
     position: relative;
 }
