--- a/src/styles.css
+++ b/src/styles.css
@@ -2,18 +2,17 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+p{ font-size: 16px; font-weight: normal;}
 
 /* Sidebar css start */
 .sidebar-toggle-menu {
     float: left;
-    width: 250px;
 }
 .main-content {
     position: relative;
     float: right;
-    width: calc(100% - 250px);
     background-color: #e9ebf1;
+    padding: 20px 16px;
 }
 .sidebar-main {
     padding: 20px 16px;
@@ -22,4 +21,24 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 footer {
     display: inline-block;
     width: 100%;
+}
+body.mat-typography .sidebar-toggle-menu .treeview-area {
+    display: none;
+    animation: animateright 0.4s;
+    position: relative;
+}
+body.mat-typography.site-menubar-fold .sidebar-toggle-menu .treeview-area {
+    display: block;
+}
+body.mat-typography .sidebar-toggle-menu  {
+    width: 0px;
+}
+body.mat-typography.site-menubar-fold .sidebar-toggle-menu{
+    width: 250px;
+}
+body.mat-typography .main-content  {
+    width: calc(100% - 0px);
+}
+body.mat-typography.site-menubar-fold .main-content{
+    width: calc(100% - 250px);
 }
