work on ndhs pages implementation

--- a/src/app/component/pages/ndhs-map/ndhs-map.component.html
+++ b/src/app/component/pages/ndhs-map/ndhs-map.component.html
@@ -1,1 +1,10 @@
-<p>ndhs-map works!</p>
+<div class="two-column-layout">
+    <div class="container-fluid">
+        <div class="panel">
+            <div class="panel-heading d-flex">
+                <h2>Present Development</h2>
+                <button mat-stroked-button color="primary">View Data</button>
+            </div>
+        </div>
+    </div>
+</div>
