--- a/src/app/component/pages/ndhs-map/ndhs-map.component.html
+++ b/src/app/component/pages/ndhs-map/ndhs-map.component.html
@@ -5,6 +5,64 @@
                 <h2>Present Development</h2>
                 <button mat-stroked-button color="primary">View Data</button>
             </div>
+            <div class="panel-content">
+                <div class="row">
+                    <!-- col-start -->
+                    <div class="col">
+                        <div class="card health-card">
+                            <div class="top-card">
+                                <span>Health Governance</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-start -->
+                    <!-- col-start -->
+                    <div class="col">
+                        <div class="card health-card">
+                            <div class="top-card">
+                                <span>Health Governance</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-start -->
+                    <!-- col-start -->
+                    <div class="col">
+                        <div class="card health-card">
+                            <div class="top-card">
+                                <span>Health Governance</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-start -->
+                    <!-- col-start -->
+                    <div class="col">
+                        <div class="card health-card">
+                            <div class="top-card">
+                                <span>Health Governance</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-start -->
+                    <!-- col-start -->
+                    <div class="col">
+                        <div class="card health-card">
+                            <div class="top-card">
+                                <span>Health Governance</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-start -->
+                    <!-- col-start -->
+                    <div class="col">
+                        <div class="card health-card">
+                            <div class="top-card">
+                                <span>Health Governance</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-start -->
+                </div>
+            </div>
         </div>
     </div>
 </div>
