added pie chart for testing

--- a/src/app/component/pages/ndhs-map/ndhs-map.component.html
+++ b/src/app/component/pages/ndhs-map/ndhs-map.component.html
@@ -13,6 +13,7 @@
                             <div class="top-card">
                                 <span>Health Governance</span>
                             </div>
+                            <div echarts [options]="chartOption" class="demo-chart"></div>
                         </div>
                     </div>
                     <!-- col-start -->
@@ -22,6 +23,7 @@
                             <div class="top-card">
                                 <span>Health Governance</span>
                             </div>
+                            <div echarts [options]="chartOption" class="demo-chart"></div>
                         </div>
                     </div>
                     <!-- col-start -->
@@ -31,6 +33,7 @@
                             <div class="top-card">
                                 <span>Health Governance</span>
                             </div>
+                            <div echarts [options]="chartOption" class="demo-chart"></div>
                         </div>
                     </div>
                     <!-- col-start -->
@@ -40,6 +43,7 @@
                             <div class="top-card">
                                 <span>Health Governance</span>
                             </div>
+                            <div echarts [options]="chartOption" class="demo-chart"></div>
                         </div>
                     </div>
                     <!-- col-start -->
@@ -49,6 +53,7 @@
                             <div class="top-card">
                                 <span>Health Governance</span>
                             </div>
+                            <div echarts [options]="chartOption" class="demo-chart"></div>
                         </div>
                     </div>
                     <!-- col-start -->
@@ -58,6 +63,7 @@
                             <div class="top-card">
                                 <span>Health Governance</span>
                             </div>
+                            <div echarts [options]="chartOption" class="demo-chart"></div>
                         </div>
                     </div>
                     <!-- col-start -->
