--- a/src/app/component/common/filter-area/filter-area.component.css
+++ b/src/app/component/common/filter-area/filter-area.component.css
@@ -3,3 +3,8 @@
     justify-content: space-between;
     align-items: center;
 }
+.language-filter a {
+    text-decoration: underline !important;
+    color: #128FFE !important;
+    font-weight: 500;
+}
