--- a/src/app/component/common/header-inner/header-inner.component.html
+++ b/src/app/component/common/header-inner/header-inner.component.html
@@ -6,7 +6,9 @@
         </button> -->
         <div class="brand-img">
             <div class="logo">
-            <img src="assets/images/logo.png" class="img-fluid" alt="brand-image">
+                <a [routerLink]="['/home']">
+                    <img  src="assets/images/logo.png" class="img-fluid" alt="brand-image">
+                </a>
             </div>
             <div class="logo-title">
                 <h1>The National Digital Health Strategy Map <a href="#">Data Details</a></h1>
