--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,9 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
+a{
+    cursor: pointer;
+}
 p {
     font-size: 16px;
     font-weight: normal;
