--- a/src/app/component/test/test.component.html
+++ b/src/app/component/test/test.component.html
@@ -1,4 +1,8 @@
-<p>nhdc-map works!</p>
+<!-- <select #exceptionalSelect id="year" [formControl]="year" (change)="handleChange($event)">
+    <option value="2021">2021</option>
+    <option value="2022">2022</option>
+</select> -->
+
 <div id="chartdiv" style="width: 100%; height: 500px"></div>
 
 <div echarts [options]="chartOption" class="demo-chart"></div>
